# qt_ntfs_permission_lookup

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  main.py  setup.cfg  setup.py
.github/workflows/: ci.yml
qt_ntfs_permission/: qt_ntfs_permission.cpp
qt_ntfs_permission_lookup/: qt_ntfs_permission_lookup.cpp
